@@ -1,7 +1,7 @@
 /*
 This file is part of rmw<https://remove-to-waste.info/>
 
-Copyright (C) 2012-2021  Andy Alt (andy400-dev@yahoo.com)
+Copyright (C) 2012-2022  Andy Alt (andy400-dev@yahoo.com)
 Other authors: https://github.com/theimpossibleastronaut/rmw/blob/master/AUTHORS.md
 
 This program is free software: you can redistribute it and/or modify
@@ -50,6 +50,8 @@ char *unescape_url (const char *str);
 bool isdotdir (const char *dir);
 
 char *resolve_path (const char *file, const char *b);
+
+void trim_char (const int c, char *str);
 
 char *join_paths (const char *argv, ...);
 
